<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverInfoFragment"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverInfoFragment"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:paddingTop="22dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/driver_info_name"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_reg"

        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/driver_info_reg"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_vec"

        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/driver_info_vec"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_range"

        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/driver_info_vehicle_range"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_model"

        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/driver_info_model"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/driver_info_info"

        android:layout_width="match_parent"
        android:layout_height="366dp"
        android:hint="@string/driver_info_add_info"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbox"
        android:padding="4dp"
        android:gravity="top" />

    <Button

        style="@style/ActionButton"
        android:elevation="2dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textSize="13sp"

        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/driver_info_sumit_btn"
        android:id="@+id/driver_info_sub_btn"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
</ScrollView>
