<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IncidentTypeActivity"
    android:orientation="vertical"
    android:background="@android:color/black"  >

    <Button
        style="@style/PlanButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/descrition"
        android:id="@+id/button_theft_des"
        android:elevation="2dp"
        android:radius="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        />

    <Button
        style="@style/PlanButton"
        android:elevation="2dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:id="@+id/button_theft_image"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="bold"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <Button
        style="@style/PlanButton"
        android:elevation="2dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        android:id="@+id/button_theft_loc"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="bold"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button

        style="@style/PlanButton"
        android:elevation="2dp"
        android:textAlignment="center"
        android:textSize="16dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/drive_informasion"
        android:id="@+id/button_theft_info"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="bold"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button

        style="@style/ActionButton"
        android:elevation="2dp"
        android:textAlignment="center"
        android:textSize="16dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sumbit"
        android:id="@+id/button_theft_summit"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="bold"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <Button
        style="@style/ActionButton"
        android:elevation="2dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textSize="13sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/sumbit"
        android:id="@+id/button_theft_back"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
